test/errors/stringNewLine.experr
ERROR: Unfinished String		#line 2
